# ManimExtra

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/OLD/: documentation.yml  linter.yml  publish.yml
.github/scripts/: ci_build_cairo.py
.github/workflows/: build.yml  check_version.yml  documentation.yml  lint.yml  linter.yml  publish.yml  release.yml  tests.yml  versions.yml
ManimExtra/: __init__.py  useful_in_development.py
ManimExtra/algebra/: __init__.py  bracket.py  system_of_equations.py  unit_circle.py
ManimExtra/animations/: __init__.py  transform_system.py
ManimExtra/geometry/: __init__.py  arc.py  cevians_and_perpendiculars.py  circles.py  default.py  intersection.py  line.py  triangle_centers.py
_sources/: index.rst.txt  installation.rst.txt
docs/: README.md  conf.py  index.rst  installation.rst  requirements.txt
docs/source/: manimextra.algebra.rst  manimextra.animations.rst  manimextra.diagrams.rst  manimextra.geometry.rst  manimextra.rst  modules.rst
docs/static/: styles.css
examples/: examples.py
manimextra/: __init__.py  useful_in_development.py
manimextra/algebra/: __init__.py  bracket.py  system_of_equations.py  unit_circle.py
source/: manimextra.algebra.html  manimextra.animations.html  manimextra.diagrams.html  manimextra.geometry.html  manimextra.html  modules.html
tests/: conftest.py  requirements.txt
(+52 files in other folders)
