[tool.poetry]
name = "manimextra"
version = "1.9"
description = "A library that extends the capabilities of Manim"
authors = ["Merzlikin-Matvey <merzlikinmatvey01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.0"
setuptools = "^72.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"