[tool.poetry]
name = "manimextra"
version = "1.12.0-alpha"
description = "A library that extends the capabilities of Manim"
authors = ["Merzlikin-Matvey <merzlikinmatvey01@gmail.com>"]
license="MIT"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.0"
setuptools = "^75.6.0"
flake8 = "^7.1.1"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.0"
furo = "^2024.8.6"
sphinx-design = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"