[tool.poetry]
name = "manimextra"
version = "1.13.0-beta"
description = "A library that extends the capabilities of Manim"
authors = ["Merzlikin-Matvey <merzlikinmatvey01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
manim = ">=0.18.0"
setuptools = ">=79.0.0"
flake8 = ">=7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
